# comicstrip

./: .gitignore  README.md  changelog  comicstrip_Python3.6  pyproject.toml  test.py
.github/workflows/: test.yml
src/comicstrip/: Comic.py  Page.py  __init__.py  cli.py  constants.py  utils.py
src/tests/: helpers.py  test_page.py
